--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,29 @@
-/*  your css code here. If applicable */
+/* /*  your css code here. If applicable */
+#table-1 {
+            width: 100vw; 
+        } 
+.center{
+	text-align: center;
+}
+.right{
+	text-align: right;
+}
+
+#table-2 {
+            width: 100vw; 
+        } 
+#table-2 td {
+    width: 30px; /* Default width for cells */
+    height: 10px; /* Default height for cells */
+    border: 1px solid black;
+    padding: 5px; /* Add padding for spacing */
+    text-align: center;
+}
+#table-3 {
+            width: 100vw; 
+        } 
+#table-3 td{
+	height: 30px;
+	text-align: center;
+	
+}
