--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,9 @@
 /* /*  your css code here. If applicable */
 #table-1 {
-            width: 100vw; 
+    width: 100vw; 
+	border: 1 px solid rgb(0,0,0);
+	padding: 1px;
+	margin: 1px;
         } 
 .center{
 	text-align: center;
@@ -10,7 +13,10 @@
 }
 
 #table-2 {
-            width: 100vw; 
+    width: 100vw; 
+	border: 1 px solid rgb(0,0,0);
+	padding: 1px;
+	margin: 1px;
         } 
 #table-2 td {
     width: 30px; /* Default width for cells */
@@ -20,7 +26,10 @@
     text-align: center;
 }
 #table-3 {
-            width: 100vw; 
+    width: 100vw; 
+	border: 1 px solid rgb(0,0,0);
+	padding: 1px;
+	margin: 1px;
         } 
 #table-3 td{
 	height: 30px;
